DAR-2557, fix throbber / dropdown z-index

--- a/skins/oasis/css/core/ToolbarCustomize.scss
+++ b/skins/oasis/css/core/ToolbarCustomize.scss
@@ -75,7 +75,7 @@
 		overflow-x: hidden;
 		position: relative;
 		width: 100%;
-		z-index: 10;
+		z-index: 2;
 
 		div {
 			font-size: 14px;
